workaround for older jboss 7 log manager